<resources>
    <string name="app_name">MOT</string>
    <string name="splash_text">단체 숙박 예약 서비스</string>
    <string name="join_text"><u>회원가입</u></string>
    <string name="search_text"><u>지역이나 숙소를 입력해주세요</u></string>
    <string name="use_date">7.13 (토) ~ 7.14 (일)\n패키지 / 6인 온돌룸, 소형 온돌룸</string>
    <string name="use_room">패키지 / 6인 온돌룸, 소형 온돌룸</string>
    <string name="review_write">숙소에 대한 리뷰를 써 주세요. ( 50자 내외 )</string>
    <string name="my_review">뷰도 좋고 룸 컨디션도 좋은 짱짱짱인 숙소였습니다.\n다음번에도 꼭 찾아오고 싶은 숙소입니다!~!~!</string>
    <string name="mypage_questions">문의 사항</string>
    <string name="mypage_reservation">예약 내역</string>
    <string name="mypage_lodging">관심 숙소</string>
    <string name="mypage_review">나의 후기</string>
    <string name="review">뷰도 좋고 룸 컨디션도 좋은 짱짱짱인 숙소였습니다.\n다음번에도 꼭 찾아오고싶은 숙소입니다!~!~!\n바베큐나 야외시설도 잘되어있고 청결이나.....</string>
    <string name="replyInfo">* 정보를 수정해주세요. ( 500자 이내 )</string>
    <string name="traffic_str">1004 센텀방면\n5005 해운대 방면\n4002 광안 방면</string>
    <string name="address_example">도로명  예) 반포대로 23길 6\n\n동주소  예) 연희동 42 - 18 </string>
    <string name="tab1">패키지 소개</string>
    <string name="tab2">객실 소개</string>
    <string name="tab3">후기</string>
    <string name="tab4">위치/교통</string>
    <string name="id_unavailable_tv">*id는 4 ~ 12자이며, 특수문자를 제외한 알파벳  소문자, 숫자로 구성\n이미 존재하는 아이디입니다.</string>
    <string name="id_avavailable_tv">*사용가능한 아이디입니다.</string>
    <string name="pw_unavailable_tv">*비밀번호는 최소 4 ~ 16자이며, 영문 대소문자, 숫자, 특수문자 강제</string>
    <string name="pw_setting_tv">비밀번호는 8~20자 내외의 영문 대문자, 소문자, 숫자,\n특수문자중 3가지이상을 조합해서 설정해 주세요.</string>
    <string name="confirm">확인하기</string>
    <string name="detail">보기</string>
    <string name="reservation">예약하기</string>
    <string name="basic_info">인원 추가 정보\n-인원 기준 30명 / 최대 35명\n-인원추가요금: 1인 10,000원\n\n객실정보 6인 온돌룸, 소형온돌룸, 3인 온돌룸\n\n구비시설 침대, 에어컨, tv, 취사시설, 식탁, 냉장고,\n드라이기, 샴푸, 린스, 바디워시</string>
</resources>