<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/backbutton"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="back_btn"
        />
    <ImageButton
        android:id="@+id/shopping_basket"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/shopping_basket"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="shopping_basket"
        />
    <ImageButton
        android:id="@+id/share_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/share_btn"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/back_btn"
        app:layout_constraintEnd_toStartOf="@id/shopping_basket"
        android:contentDescription="share_btn"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        tools:tabTextColor="#525252">

        <com.google.android.material.tabs.TabItem
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:text="@string/tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:text="@string/tab2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:text="@string/tab3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:text="@string/tab4" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/tab_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablayout"/>

    <android.widget.Button
        android:id="@+id/yellow_bar"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="20dp"
        android:text="예약하기"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/write_done_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>